[gd_scene load_steps=2 format=3 uid="uid://cwg2l0ywb76pv"]

[ext_resource type="Script" path="res://client/ui/character_selection.gd" id="1"]

[node name="CharacterSelection" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Select Character"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CharacterList" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/CharacterList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NewCharacterHBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/VBox/NewCharacterHBox"]
layout_mode = 2
text = "New Character Name:"

[node name="NameInput" type="LineEdit" parent="Panel/VBox/NewCharacterHBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter name..."

[node name="CreateButton" type="Button" parent="Panel/VBox/NewCharacterHBox"]
layout_mode = 2
text = "Create"

[node name="Spacer3" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Loading characters..."
horizontal_alignment = 1
